# shader.d

./: .gitignore  dub.sdl  dub.selections.json  kernel.bc  kernel.d  kernel.ll  kernel.spv  test.frag
binding/: CMakeLists.txt
binding/src/: bind.cpp
example/: dub.sdl  dub.selections.json  frag.spv  fragment.bc  fragment.d  fragment.ll  test.vert  vert.spv  vertex.bc  vertex.d  vertex.ll
example/source/: app.d
source/: app.d
source/llvm/: attr.d  block.d  func.d  inst.d  mod.d  operand.d  type.d  use.d  value.d  var.d
source/shader/: attribute.d  builtin.d
source/spirv/: annotationmanager.d  capabilitymanager.d  compiler.d  constantmanager.d  entrypointmanager.d  extensionmanager.d  extinstimportmanager.d  funcmanager.d  globalvarmanager.d  idmanager.d  instruction.d  instructionmanager.d  spirv.d  spirvwriter.d  spv.d  typeconstmanager.d  typemanager.d  varmanager.d  writer.d
